style.css
.cormorant-upright-regular {
    font-family: "Cormorant Upright", serif;
    font-weight: 400;
    font-style: normal;
}

.cormorant-upright-bold {
    font-family: "Cormorant Upright", serif;
    font-weight: 700;
    font-style: italic;
}

body {
    color: #ece7e7;
    margin: 0;
    padding: 0;
}

.container {
    height: 100vh;
    max-width: 600px;
    margin: 0 auto;
    padding: 20px;
    text-align: center;
    display: flex;
    flex-direction: column;
}

.top {
    flex: 1;
}

.title {
    font-size: 2.5em;
    margin-bottom: 10px;
}

.description {
    font-size: 1em;
    line-height: 1.6;
    margin-bottom: 30px;
}

.image-container {
    position: relative;
    width: 300px;
    height: 300px;
    margin: 0 auto 30px;
}

.bowl-image {
    max-width:100%;
    height:auto;
    border-radius: 50%;
    object-fit: cover;
}

.flavor-selector {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-bottom: 20px;
}

.flavor-selector button {
    font-family: "Cormorant Upright", serif;
    font-weight: 400;
    font-style: normal;
    background: none;
    border: none;
    color: #ece7e7;
    filter: opacity(50%);
    font-size: 1.1em;
    margin: 0 10px;
    padding: 5px 10px;
    cursor: pointer;
    transition: all 0.3s ease;
}

.flavor-selector button:hover,
.flavor-selector button.active {
    filter: opacity(100%);
}

.navigation {
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
}

.navigation button {
    background: none;
    border: none;
    color: #fff;
    font-size: 2em;
    cursor: pointer;
    transition: all 0.3s ease;
}

.navigation button:hover {
    transform: scale(1.2);
}

@media (max-width: 600px) {
    .container {
        padding: 10px;
    }

    h1 {
        font-size: 2em;
    }

    .image-container {
        width: 200px;
        height: 200px;
    }

    .flavor-selector button {
        margin: 5px;
    }
}

